# vesuvius-gui

./: .gitignore  Cargo.toml  vesuvius-remap.example.json  vesuvius-render.Dockerfile
.cargo/: config.toml
scripts/: analyze-netlog.py
src/: lib.rs
src/atlas/: mod.rs  models.rs
src/gui/: app.rs  volume_pane.rs
src/volume/: mod.rs  transform.rs
src/zarr/: ome.rs
vesuvius-atlas-rs/: Cargo.toml
vesuvius-atlas-rs/src/: lib.rs  loader.rs  models.rs
vesuvius-c3d/: Cargo.toml  build.rs
vesuvius-c3d/src/: ffi.rs  lib.rs
vesuvius-c3d/tests/fixtures/: subchunk_5_3_3__0_0_0.c3dc
vesuvius-gui/: Cargo.toml
vesuvius-gui/src/: main.rs
vesuvius-gui/src/gui/: app.rs  atlas_download.rs  mod.rs  volume_pane.rs
vesuvius-render/: Cargo.toml  build.rs
vesuvius-render/src/: main.rs  metadata.rs  tiled_tiff.rs
vesuvius-rs/: Cargo.toml
vesuvius-rs/examples/: bench_composite_normal.rs  download-probe.rs  unified_cache_smoke.rs  unified_cache_smoke_v3.rs
vesuvius-rs/src/: downloader.rs  lib.rs  model.rs  remap_config.rs  zarr_test.rs
vesuvius-rs/src/cache/: backfiller.rs  cache.rs  disk.rs  downloader.rs  epoch.rs  lifo.rs  mod.rs  netlog.rs  priority.rs  purge.rs  s3_auth.rs  sidecar.rs  spill.rs  state.rs  tests.rs  volume.rs
vesuvius-rs/src/cache/backfillers/: mod.rs  ome_zarr.rs  ome_zarr_v3.rs  synthesized_lod.rs  synthetic.rs
vesuvius-rs/src/catalog/: obj_repository.rs
vesuvius-rs/src/volume/: composition.rs  mod.rs  objvolume.rs  overlay.rs  tifxyz.rs  transform.rs  volume64x4.rs  zarr_paint.rs
vesuvius-rs/src/zarr/: mod.rs  ome.rs  test.rs
vesuvius-zarr/: Cargo.toml
vesuvius-zarr/examples/: read_c3d_local.rs  read_c3d_remote.rs
vesuvius-zarr/src/: blosc.rs  lib.rs  metrics.rs  ome.rs  sharding.rs  v3.rs
