[package]
name = "vesuvius-c3d"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "FFI bindings to libc3d (3D volumetric u8 codec) for vesuvius-gui."

[dependencies]
log = { workspace = true }

[build-dependencies]
cc = { workspace = true }

[dev-dependencies]
anyhow  = { workspace = true }
clap    = { workspace = true }
image   = { workspace = true }
reqwest = { workspace = true }
