[package]
name = "vesuvius-render"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
vesuvius-rs   = { path = "../vesuvius-rs" }
vesuvius-zarr = { path = "../vesuvius-zarr" }

anyhow          = { workspace = true }
clap            = { workspace = true }
env_logger      = { workspace = true }
futures         = { workspace = true }
image           = { workspace = true }
indicatif       = { workspace = true }
log             = { workspace = true }
num_cpus        = { workspace = true }
regex           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
tokio           = { workspace = true }

# Format-specific encoders used to embed render provenance (git revision,
# build time, params) directly into output files.
png             = { workspace = true }
tiff            = { workspace = true }

[dev-dependencies]
tempfile        = { workspace = true }
