[package]
name = "vesuvius-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
vesuvius-zarr   = { path = "../vesuvius-zarr" }
vesuvius-c3d    = { path = "../vesuvius-c3d" }

anyhow          = { workspace = true }
base64          = { workspace = true }
dashmap         = { workspace = true }
derive_more     = { workspace = true }
directories     = { workspace = true }
ecolor          = { workspace = true }
ehttp           = { workspace = true }
fxhash          = { workspace = true }
itertools       = { workspace = true }
libm            = { workspace = true }
log             = { workspace = true }
lz4-compression = { workspace = true }
nalgebra        = { workspace = true }
rayon           = { workspace = true }
regex           = { workspace = true }
reqwest         = { workspace = true }
ruzstd          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
tiff            = { workspace = true }
wavefront_obj   = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
