[package]
name = "vesuvius-zarr"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
dashmap         = { workspace = true }
derive_more     = { workspace = true }
directories     = { workspace = true }
ehttp           = { workspace = true }
fxhash          = { workspace = true }
libm            = { workspace = true }
log             = { workspace = true }
lz4-compression = { workspace = true }
reqwest         = { workspace = true }
ruzstd          = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
serde_path_to_error  = { workspace = true }
sha2            = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap = { workspace = true }
